# Optimisation-Celebrity-Net

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODING.md  Makefile  README.md  deploy.sh  docker-compose.yml  nbk_dist_function.ipynb  nbk_h.ipynb  ntbk.ipynb  pyproject.toml
Data2/didi-b/: d0b3fb1a-ef09-4f89-8bdf-9cae29f8ae28.jfif
archi_celbrity/celebrity-recognition-ai-develop/: .gitlab-ci.yml  Makefile  ntbk.ipynb
celebrity_recognition_ai/: docker-compose.yml
celebrity_recognition_ai/app/: .dockerignore  Dockerfile  api.py  frontend.py  utils.py
celebrity_recognition_ai/configs/: labels.yaml
celebrity_recognition_ai/ml/: ModifiedCelebrityCosinus.py  ModifiedCelebrityRegressor.py  ModifiedEtudiantReg.py  ModifiedStudentb0Regressor.py  StudentNet.py  data.py  engine.py  etudiant.py  etudiant2.py  from_scratch_student.py  logging_config.py  loss_kd_and_get_outputs.py  mobilenet_v2_100.py  models.py  models2.py  modifiedMobileRegressor.py  modifiedStudentCosinus.py  student_bo.py  test_accuracy.py  train.py  train_test.py  train_test_accuracy.py  utils.py
for_mypy/: add.py  add_with_execpted_args.py  add_with_unexecpted_args.py
log_dir/: events.out.tfevents.1724761656.holy-Legion-5-15ITH6H.249664.0  events.out.tfevents.1724761969.holy-Legion-5-15ITH6H.250656.0  events.out.tfevents.1724762015.holy-Legion-5-15ITH6H.251021.0  events.out.tfevents.1724763606.holy-Legion-5-15ITH6H.273758.0
runs/Aug21_12-48-40_holy-Legion-5-15ITH6H/: events.out.tfevents.1724244520.holy-Legion-5-15ITH6H.38402.0
runs/Aug21_12-50-36_holy-Legion-5-15ITH6H/: events.out.tfevents.1724244636.holy-Legion-5-15ITH6H.41799.0
runs/Aug21_13-06-14_holy-Legion-5-15ITH6H/: events.out.tfevents.1724245574.holy-Legion-5-15ITH6H.7490.0
runs/Aug21_13-06-46_holy-Legion-5-15ITH6H/: events.out.tfevents.1724245606.holy-Legion-5-15ITH6H.7490.1
runs/Aug21_13-08-33_holy-Legion-5-15ITH6H/: events.out.tfevents.1724245713.holy-Legion-5-15ITH6H.8607.0
runs/Aug21_13-13-42_holy-Legion-5-15ITH6H/: events.out.tfevents.1724246022.holy-Legion-5-15ITH6H.10046.0
runs/Aug21_13-24-37_holy-Legion-5-15ITH6H/: events.out.tfevents.1724246677.holy-Legion-5-15ITH6H.14349.0
tests/: test_api.py  test_empty.py  test_mypy.py
tests/test-hooks/: donnees.json  test.py
(+130 files in other folders)
