[tool.poetry]
name = "celebrity-recognition-ai"
version = "0.1.0"
description = ""
authors = ["Béranger GUEDOU <beranger@datakori.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.5.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
semgrep = "^1.66.0"
bandit = "^1.7.8"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
