[tool.poetry]
name = "celebrity-recognition-ai"
version = "0.1.0"
description = ""
authors = ["Béranger GUEDOU <beranger@datakori.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.5.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
semgrep = "^1.66.0"
bandit = "^1.7.8"
pytest = "^8.1.1"
flask = "^3.0.2"
gunicorn = "^21.2.0"
timm = "^0.9.16"
jupyter = "^1.0.0"
pillow = "^10.3.0"
albumentations = "^1.4.3"
mlflow = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
